--- a/code/css/style.css
+++ b/code/css/style.css
@@ -210,6 +210,7 @@ body {
 
 .card .card-head h6 {
     font-size: 17px;
+    margin-top: 20px;
     font-weight: 500;
     text-transform: uppercase;
     color: #ff7f46;
