--- a/code/css/media.css
+++ b/code/css/media.css
@@ -164,31 +164,48 @@
         padding-bottom: 30px;
     }
 
-    .course-banner {
-        padding: 145px 0 !important;
-        z-index: 1;
+    .footer-data .col-4 {
+        width: 50% !important;
     }
 
-    /* .course-banner .course-data h2 {
-        font-size: 45px !important;
+    .footer-data .col-2 {
+        width: 50% !important;
     }
 
-    .course-banner .course-data p {
-        font-size: 15px !important;
+    .footer-data .col-3 {
+        width: 50% !important;
     }
 
-    .course-banner .course-data span {
-        font-size: 15px !important;
-    } */
+    .footer-data {
+        padding: 40px 0 !important;
+    }
+
 }
 
 @media(max-width:768px) {
     .container-fluid button {
         margin-left: 55%;
+
     }
 
     .container-fluid {
-        text-align: end;
+        position: relative;
+        transition: all 0.5s;
+    }
+
+    .collapse {
+        justify-content: left !important;
+        position: fixed;
+        background-color: white;
+        z-index: 999;
+    }
+
+    .container-fluid {
+        /* text-align: end; */
+
+        text-align: left !important;
+        display: inline !important;
+
     }
 
     .result {
@@ -319,7 +336,8 @@
     }
 
     .footer-data .footer-logo img {
-        width: 30%;
+        width: 50% !important;
+        margin-bottom: 20px !important;
     }
 
     .footer-data .footer-logo p {
@@ -351,7 +369,7 @@
     }
 
     .footer-contact h3 {
-        margin: 16px 0;
+        /* margin: 16px 0; */
         padding-bottom: 2px;
     }
 
@@ -423,6 +441,14 @@
 
     .card-media .col-4 {
         width: 50%;
+    }
+
+    .footer-padding {
+        text-align: center;
+        justify-content: space-evenly;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .card .box .card-data h4 {
@@ -510,10 +536,7 @@
     }
 
     .footer-data .footer-logo p {
-        width: 85%;
-        line-height: 18px;
-        margin-top: 1px;
-        font-size: 12px;
+        display: none !important;
     }
 
     .footer-about h3 {
@@ -531,9 +554,10 @@
     }
 
     .footer-contact p {
-        width: 80% !important;
-        font-size: 12px !important;
-        line-height: 15px !important;
+        width: 100% !important;
+        font-size: 10px !important;
+        line-height: 12px !important;
+        margin: 0 !important;
     }
 
     .footer-contact a {
@@ -547,6 +571,8 @@
 
     .footer-letter h3 {
         font-size: 14px !important;
+        margin: 0 !important;
+        /* margin-bottom: 10px !important; */
     }
 
     .e-mail {
@@ -578,7 +604,7 @@
 
     .footer-end .edour p {
         line-height: 15px !important;
-        font-size: 10px !important;
+        font-size: 12px !important;
     }
 
     .course-banner .course-data h2 {
@@ -607,14 +633,26 @@
         width: 100%;
     }
 
-    .footer-data .col-2 {
-        width: 100%;
-    }
-
     .footer-data .col-3 {
-        width: 100%;
+        width: 50%;
     }
 
+    .footer-data .col-3 .footer-letter {
+        display: none;
+    }
+
+    .footer-data {
+        padding: 30px 0 !important;
+    }
+
+    .footer-end .end-list li {
+        padding: 12px !important;
+        font-size: 12px !important;
+    }
+
+    .footer-end .end-list {
+        margin: 0 !important;
+    }
 }
 
 @media(max-width:376px) {
@@ -685,9 +723,14 @@
         width: 100% !important;
     }
 
+    .footer-about .about-list a {
+        font-size: 10px !important;
+        line-height: 20px !important;
+    }
+
     .footer-contact p {
         width: 100% !important;
-        font-size: 12px !important;
+        font-size: 10px !important;
         line-height: 15px !important;
     }
 
@@ -714,6 +757,10 @@
     .course-eduction .course-eduction-heading h3 {
         font-size: 25px !important;
     }
+
+    .footer-data {
+        padding: 30px 0 !important;
+    }
 }
 
 @media(max-width:320px) {
@@ -736,11 +783,11 @@
     }
 
     .footer-data .col-2 {
-        width: 100%;
+        width: 50%;
     }
 
     .footer-data .col-3 {
-        width: 100%;
+        width: 50%;
     }
 
     .footer-end .col-6 {
@@ -758,10 +805,20 @@
         margin: 10px;
     }
 
+    .footer-about .about-list a {
+        font-size: 9px !important;
+        line-height: 20px !important;
+    }
+
     .footer-label .e-mail input {
         height: 55px !important;
         padding: 2px 20px 5px 10px;
         width: 100%;
+    }
+
+    .footer-end .end-list li {
+        padding: 5px !important;
+        font-size: 9px !important;
     }
 
     .footer-label .e-mail button {
@@ -783,14 +840,26 @@
         align-items: center;
     }
 
+    .footer-end {
+        padding-bottom: 20px !important;
+    }
+
     .footer-data .footer-logo p {
         width: 100% !important;
     }
 
+    .footer-contact .social-media a {
+        padding: 2px !important;
+    }
+
+    .footer-contact a {
+        font-size: 10px !important;
+    }
+
     .footer-contact p {
         width: 100% !important;
-        font-size: 12px !important;
-        line-height: 15px !important;
+        font-size: 10px !important;
+        line-height: 12px !important;
     }
 
     .footer-letter p {
@@ -816,4 +885,5 @@
     .course-eduction .course-eduction-heading h3 {
         font-size: 20px !important;
     }
+
 }
