--- a/code/css/media.css
+++ b/code/css/media.css
@@ -190,207 +190,201 @@
         transition: all 0.5s;
     }
 
-    .collapse {
-        justify-content: left !important;
-        position: fixed;
-        background-color: #eaf1f9;
-        z-index: 999;
-    }
-
-    .container-fluid {
-        /* text-align: end; */
-        text-align: left !important;
-        display: inline !important;
-
-    }
-
-    .result {
-        padding: 8px 0 !important;
-    }
-
-    .result .data h2 {
-        font-size: 30px !important;
-        line-height: 38px !important;
-    }
-
-    .result .data p {
-        font-size: 17px !important;
-        line-height: 22px !important;
-        margin: 15px 0 !important;
-        padding-right: 0;
-    }
-
-    .card-media .col-4 {
-        width: 50%;
-    }
-
-    .card .card-head h6 {
-        margin-top: 50px !important;
-    }
-
-    .card .card-head h2 {
-        margin: 10px 0 !important;
-        font-size: 30px;
-    }
-
-    .card .box .icon i {
-        color: #ff7f46;
-        font-size: 30px;
-        margin-top: 18px;
-    }
-
-    .card .box .card-data h4 {
-        font-size: 17px;
-        color: black;
-        font-weight: 600;
-        margin-top: 10px;
-    }
-
-    .card .box .card-data p {
-        font-size: 16px;
-        color: #000;
-        width: 90%;
-        font-weight: 500;
-        line-height: 21px;
-    }
-
-    .study {
-        padding: 30px 0;
-    }
-
-    .study .study-heading h3 {
-        font-size: 22px;
-        font-weight: 600;
-        margin-bottom: 6px;
-    }
-
-    .study .study-heading p {
-        width: 78%;
-    }
-
-    .study .study-heading {
-        padding: 0 0 15px 20px;
-    }
-
-    .about {
-        padding: 30px 0;
-    }
-
-    .about h3 {
-        font-size: 22px;
-        margin-top: 5px;
-        margin-bottom: 5px;
-        text-transform: capitalize;
-        color: black;
-    }
-
-    .about p {
-        color: #636363;
-        font-size: 14px;
-        max-width: 85%;
-        margin-bottom: 10px;
-        font-weight: 400;
-    }
-
-    .about .list-about li {
-        font-size: 14px;
-    }
-
-    .about .result-btn {
-        margin-top: 10px;
-        padding: 5px 22px;
-    }
-
-    .portfolio-main .col-4 {
-        width: 100%;
-    }
-
-    .Portfolios {
-        padding: 40px 0;
-    }
-
-    .Portfolios .Portfolios-heading h3 {
-        margin-bottom: 10px;
-        font-size: 40px;
-    }
-
-    .Portfolios .Portfolios-card .portfolios-data {
-        padding: 10px;
-    }
-
-    .Portfolios .Portfolios-card .portfolios-data h6 {
-        font-size: 15px;
-    }
-
-    .Portfolios .Portfolios-card .portfolios-data p {
-        font-size: 12px;
-        margin-top: 5px;
-    }
-
-    .footer-data {
-        padding: 30px 0;
-    }
-
-    .footer-data .footer-logo img {
+    
+    .header-logo-sidebar    img {
         width: 50% !important;
-        margin-bottom: 20px !important;
+        padding: 15px; 
     }
 
-    .footer-data .footer-logo p {
-        width: 88%;
-        line-height: 24px;
-        margin-top: 10px;
-        font-size: 14px;
-    }
 
-    .footer-about h3 {
-        font-size: 16px;
-    }
+.result {
+    padding: 8px 0 !important;
+}
 
-    .footer-data .col-4 {
-        width: 50%;
-    }
+.result .data h2 {
+    font-size: 30px !important;
+    line-height: 38px !important;
+}
 
-    .footer-data .col-2 {
-        width: 50%;
-    }
+.result .data p {
+    font-size: 17px !important;
+    line-height: 22px !important;
+    margin: 15px 0 !important;
+    padding-right: 0;
+}
 
-    .footer-data .col-3 {
-        width: 50%;
-    }
+.card-media .col-4 {
+    width: 50%;
+}
 
-    .footer-about h3 {
-        margin-bottom: 10px;
-        padding-bottom: 2px;
-    }
+.card .card-head h6 {
+    margin-top: 50px !important;
+}
 
-    .footer-contact h3 {
-        /* margin: 16px 0; */
-        padding-bottom: 2px;
-    }
+.card .card-head h2 {
+    margin: 10px 0 !important;
+    font-size: 30px;
+}
 
-    .footer-letter h3 {
-        margin: 15px 0;
-        padding-bottom: 2px;
-    }
+.card .box .icon i {
+    color: #ff7f46;
+    font-size: 30px;
+    margin-top: 18px;
+}
 
-    .course-banner .course-data h2 {
-        font-size: 42px !important;
-        line-height: 22px !important;
-    }
+.card .box .card-data h4 {
+    font-size: 17px;
+    color: black;
+    font-weight: 600;
+    margin-top: 10px;
+}
 
-    .course-banner {
-        padding: 115px 0 !important;
-        z-index: 1;
-    }
+.card .box .card-data p {
+    font-size: 16px;
+    color: #000;
+    width: 90%;
+    font-weight: 500;
+    line-height: 21px;
+}
 
-    .course-main .col-4 {
-        width: 50%;
-    }
+.study {
+    padding: 30px 0;
+}
 
-    .course-eduction-card {
-        width: 100% !important;
-    }
+.study .study-heading h3 {
+    font-size: 22px;
+    font-weight: 600;
+    margin-bottom: 6px;
+}
+
+.study .study-heading p {
+    width: 78%;
+}
+
+.study .study-heading {
+    padding: 0 0 15px 20px;
+}
+
+.about {
+    padding: 30px 0;
+}
+
+.about h3 {
+    font-size: 22px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    text-transform: capitalize;
+    color: black;
+}
+
+.about p {
+    color: #636363;
+    font-size: 14px;
+    max-width: 85%;
+    margin-bottom: 10px;
+    font-weight: 400;
+}
+
+.about .list-about li {
+    font-size: 14px;
+}
+
+.about .result-btn {
+    margin-top: 10px;
+    padding: 5px 22px;
+}
+
+.portfolio-main .col-4 {
+    width: 100%;
+}
+
+.Portfolios {
+    padding: 40px 0;
+}
+
+.Portfolios .Portfolios-heading h3 {
+    margin-bottom: 10px;
+    font-size: 40px;
+}
+
+.Portfolios .Portfolios-card .portfolios-data {
+    padding: 10px;
+}
+
+.Portfolios .Portfolios-card .portfolios-data h6 {
+    font-size: 15px;
+}
+
+.Portfolios .Portfolios-card .portfolios-data p {
+    font-size: 12px;
+    margin-top: 5px;
+}
+
+.footer-data {
+    padding: 30px 0;
+}
+
+.footer-data .footer-logo img {
+    width: 50% !important;
+    margin-bottom: 20px !important;
+}
+
+.footer-data .footer-logo p {
+    width: 88%;
+    line-height: 24px;
+    margin-top: 10px;
+    font-size: 14px;
+}
+
+.footer-about h3 {
+    font-size: 16px;
+}
+
+.footer-data .col-4 {
+    width: 50%;
+}
+
+.footer-data .col-2 {
+    width: 50%;
+}
+
+.footer-data .col-3 {
+    width: 50%;
+}
+
+.footer-about h3 {
+    margin-bottom: 10px;
+    padding-bottom: 2px;
+}
+
+.footer-contact h3 {
+    /* margin: 16px 0; */
+    padding-bottom: 2px;
+}
+
+.footer-letter h3 {
+    margin: 15px 0;
+    padding-bottom: 2px;
+}
+
+.course-banner .course-data h2 {
+    font-size: 42px !important;
+    line-height: 22px !important;
+}
+
+.course-banner {
+    padding: 115px 0 !important;
+    z-index: 1;
+}
+
+.course-main .col-4 {
+    width: 50%;
+}
+
+.course-eduction-card {
+    width: 100% !important;
+
+}
 }
 
 @media(max-width:426px) {
