--- a/code/css/style.css
+++ b/code/css/style.css
@@ -86,7 +86,7 @@ body {
 
 /* ====================== HEADER ====================== */
 .header-logo img {
-    /* width: 60%; */
+    width: 60%;
     padding-bottom: 15px;
     padding-top: 15px;
 }
@@ -95,49 +95,77 @@ body {
     text-align: center;
 }
 
-.container-fluid .collapse .navbar-nav .nav-item a{
-    color:#000;
-    font-weight: 700;
-    font-family: var('poppins');
-    transition: all 0.5s;
-}
-.container-fluid .collapse .navbar-nav .nav-item a:hover{
-    color: #ff7f46;
-}
-
 .collapse {
     display: flex;
     justify-content: space-around;
 }
-.dropdown{
+
+.nav-item a:hover {
+    color: #ff7b00;
+    transition: all 0.5s;
+}
+
+.nav-item a {
+    color: #333333;
+    font-size: 16px;
+    border: none;
+    font-weight: 500;
+}
+
+.dropdown a {
+    font-weight: 500;
+    color: #333333;
+    font-size: 16px;
+    border: none;
+}
+
+.dropdown-toggle {
     color: white;
     font-size: 16px;
     border: none;
 }
-.dropdown-toggle{
-    color: white;
-    font-size: 16px;
-    border: none;
-}
-.dropdown-menu{
+
+.dropdown-menu {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
-.dropdown-menu li a{
+
+.dropdown-menu li a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
-.dropdown-menu li a:hover{
+
+.dropdown-menu li a:hover {
     background-color: #ddd;
 }
-.dropdown:hover .dropdown-menu{
+
+.dropdown:hover .dropdown-menu {
     display: block;
+}
+
+.main-content {
+    padding: 20px;
+}
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: -250px;
+    height: 100%;
+    width: 250px;
+    background-color: #f8f9fa;
+    transition: left 0.3s;
+    z-index: 1000;
+}
+
+.sidebar.show {
+    left: 0;
 }
 
 /* ======================== HEADER-IMG ======================== */
