--- a/code/css/media.css
+++ b/code/css/media.css
@@ -212,6 +212,14 @@
         padding-right: 0;
     }
 
+    .dropdown-menu li a:nth-child(1){
+        border-bottom: 1px solid #000;
+    }
+
+    .dropdown:hover .dropdown-menu {
+        border: none;
+    }
+
     .card-media .col-4 {
         width: 50%;
     }
