--- a/code/css/style.css
+++ b/code/css/style.css
@@ -143,7 +143,7 @@ body {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    border-bottom: 1px solid #636363;
+    /* border-bottom: 1px solid #636363; */
 }
 
 .dropdown-menu li a:hover {
